--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -69,9 +69,10 @@
 
 .bookings-title {
   line-height: 16px;
+  padding-bottom: 16px;
 }
 
 .bookings-container {
-  margin-top: 36px;
+  margin-top: 42px;
   margin-bottom: 16px;
 }
