--- a/app/assets/stylesheets/pages/_listings.scss
+++ b/app/assets/stylesheets/pages/_listings.scss
@@ -1,5 +1,6 @@
 .row {
   text-align: center;
+  margin-bottom: 36px;
 }
 
 .index-card {
